package com.company._240311_ExamParcial;

public interface Comparable {
    int compareTo(Object o);
}
